Fix/use hostconfig to add container styles (#36)
* background fix

* Added background color via CSS again

* Fixed some colours

* Fixed class names in CSS and HTML

* Moved interfaz to separate component

* Fixed action and add column styles

* Reverted removed commented code

* Removed CSS properties panel color modification

* Changed querySelector by getElementById

* Removed commented code

--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -29,14 +29,14 @@
         </div>
         <div class="content" style="display: flex; flex: 1 1 auto; overflow-y: hidden;">
             <section class="aside js-aside">
-                <nav class="aside-menu">
-                    <span class="aside-menu__title">Tool box</span>
-                    <span class="aside-menu__bullet js-aside-bullet">
-                        <span class="aside-menu__icon js-aside-icon"></span>
-                        <span class="aside-menu__description js-aside-description">Hide</span>
+                <nav class="acd-aside-menu">
+                    <span class="acd-aside-menu__title">Tool box</span>
+                    <span class="acd-aside-menu__bullet js-aside-bullet">
+                        <span class="acd-aside-menu__icon js-aside-icon"></span>
+                        <span class="acd-aside-menu__description js-aside-description">Hide</span>
                     </span>
                 </nav>
-                <ul class="aside-items js-aside-items"></ul>
+                <ul id="toolPalette" class="aside-items js-aside-items"></ul>
             </section>
             <div style="display: flex; flex-direction: column; flex: 1 1 100%; overflow: hidden;">
                 <div style="display: flex; flex: 1 1 100%; overflow: hidden;">
