--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -41,7 +41,7 @@
                         <div id="elementTreeSplitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-left: 1px solid #D2D2D2; border-right: 1px solid #D2D2D2; cursor: ew-resize;"></div>
                         <div id="elementTreeHost" style="flex: 0 0 auto; width: 250px; overflow-x: hidden; overflow-y: auto;"></div>
                         <div id="propertySheetSplitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-left: 1px solid #D2D2D2; border-right: 1px solid #D2D2D2; cursor: ew-resize;"></div>
-                        <div id="propertySheetHost" style="flex: 0 0 auto; width: 360px; height: 100%; overflow: auto; padding: 10px;"></div>
+                        <div id="propertySheetHost" style="flex: 0 0 auto; width: 360px; height: 100%; overflow: auto; padding: 10px; background-color: #F9F9F9"></div>
                     </div>
                     <div id="horizontalSplitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-top: 1px solid #D2D2D2; border-bottom: 1px solid #D2D2D2; cursor: ns-resize;"></div>
                     <div id="jsonEditorHost" style="flex: 0 0 auto; display: flex; height: 300px; overflow: hidden;">
