--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -1,52 +1,91 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Adaptive Cards Designer (preview)</title>
-        <script src="https://unpkg.com/markdown-it@8.4.0/dist/markdown-it.min.js"></script>
-    
-        <script src="editor/monaco/min/vs/loader.js"></script>
-        <script src="editor/monaco-loader.js"></script>
-    
-        <script src="dist/adaptivecards-designer.js"></script>
 
-        <link rel="stylesheet" href="css/app.css" type="text/css" />
-        <link rel="stylesheet" href="css/adaptivecards-default.css" type="text/css" />
-        <link rel="stylesheet" href="css/card-designer.css" type="text/css" />
-        <link rel="stylesheet" href="css/adaptivecards-controls.css" type="text/css"/>
-    </head>
-    <body>
-        <div style="display: flex; flex-direction: column; height: 100%;">
-            <div id="header" style="flex: 0 0 auto; background-color: black; display: flex; align-items: center;">
-                <img src="./assets/adaptive-card-square-150.png" style="flex: 0 0 48px; height: 48px; margin-right: 20px;"/>
-                <span style="color: white; font-size: 22px;">Adaptive Cards Designer (preview)</span>
-            </div>
-            <div id="toolbar" style="flex: 0 0 auto; background-color: #F1F1F1; display: flex; align-items: center; border-bottom: 1px solid #D2D2D2; padding: 0 20px 0 20px;">
-                <span style="color: black;">Host:</span>
-                <div id="containerPickerHost" style="flex: 0 0 250px; margin: 0px 16px 0px 8px;"></div>
-                <div id="btnNewCard" class="toolbar-button toolbar-icon-card" title="Start a new card from scratch">New card</div>
-            </div>
-            <div style="display: flex; flex: 1 1 auto; overflow-y: hidden;">
-                <div style="flex: 1 0 150px; padding: 10px; border-right: 1px solid #D2D2D2; overflow-y: auto;">
-                    <div id="toolPalette"></div>
-                </div>
+<head>
+    <title>Adaptive Cards Designer (preview)</title>
+    <script src="https://unpkg.com/markdown-it@8.4.0/dist/markdown-it.min.js"></script>
+    <script src="editor/monaco/min/vs/loader.js"></script>
+    <script src="editor/monaco-loader.js"></script>
 
-                <div style="display: flex; flex-direction: column; flex: 1 1 100%; overflow: hidden;">
-                    <div style="display: flex; flex: 1 1 100%; overflow: hidden;">
-                        <div id="designerBackground" style="flex: 1 1 70%; background-color: #F6F6F6; display: flex; flex-direction: column; overflow: auto;">
-                            <div style="flex: 1 1 100%; overflow: auto;">
-                                <div id="designerHost" style="margin: 20px 40px 20px 20px;"></div>
-                            </div>
-                            <div id="errorPane" style="display: none; flex: 0 0 65px; color: white; background-color: #3a96dd; border-top: 1px solid #D2D2D2; padding: 4px 8px; overflow-x: hidden; overflow-y: auto; white-space: nowrap;"></div>
-                        </div>
-                        <div id="verticalSplitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-left: 1px solid #D2D2D2; border-right: 1px solid #D2D2D2; cursor: ew-resize;"></div>
-                        <div id="propertySheetHost" style="flex: 0 0 auto; width: 360px; height: 100%; overflow: auto; padding: 10px;"></div>
-                    </div>
-                    <div id="horizontalSplitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-top: 1px solid #D2D2D2; border-bottom: 1px solid #D2D2D2; cursor: ns-resize;"></div>
-                    <div id="jsonEditorHost" style="flex: 0 0 auto; display: flex; height: 300px; overflow: hidden;">
-                        <div id="loadingEditor" style="padding: 8px;">Loading editor...</div>                
-                    </div>
-                </div>
-            </div>
+    <script src="dist/adaptivecards-designer.js"></script>
+
+    <link rel="stylesheet" href="css/app.css" type="text/css" />
+    <link rel="stylesheet" href="css/adaptivecards-default.css" type="text/css" />
+    <link rel="stylesheet" href="css/card-designer.css" type="text/css" />
+    <link rel="stylesheet" href="css/adaptivecards-controls.css" type="text/css" />
+</head>
+
+<body>
+    <div style="display: flex; flex-direction: column; height: 100%;">
+        <div id="header" style="flex: 0 0 auto; background-color: black; display: flex; align-items: center;">
+            <img src="./assets/adaptive-card-square-150.png" style="flex: 0 0 48px; height: 48px; margin-right: 20px;" />
+            <span style="color: white; font-size: 22px;">Adaptive Cards Designer (preview)</span>
         </div>
-    </body>
+        <div id="toolbar" style="flex: 0 0 auto; background-color: #F1F1F1; display: flex; align-items: center; border-bottom: 1px solid #D2D2D2;">
+            <div class="toolbar-btn toolbar-btn__icon-fullscreen js-enter-fullscreen">Enter Full Screen</div>
+            <span style="color: black;">Select Host App:</span>
+            <div id="containerPickerHost" style="flex: 0 0 250px; margin: 0px 16px 0px 8px;"></div>
+            <div class="toolbar-btn toolbar-btn__icon-copy js-copy-json">Copy JSON</div>
+        </div>
+        <div class="content" style="display: flex; flex: 1 1 auto; overflow-y: hidden;">
+            <section class="aside js-aside">
+                <nav class="bullet__wrapper">
+                    <span class="bullet__title">Tool box</span>
+                    <span class="bullet js-aside-bullet">
+                        <span class="bullet__icon js-aside-icon"></span>
+                        <span class="bullet__description js-aside-description">Hide</span>
+                    </span>
+                </nav>
+                <ul id="toolPalette" class="aside-items js-aside-items"></ul>
+            </section>
+            <div style="display: flex; flex-direction: column; flex: 1 1 100%; overflow: hidden;">
+                <div style="display: flex; flex: 1 1 100%; overflow: hidden;">
+                    <div id="designerBackground" style="flex: 1 1 70%; background-color: #F6F6F6; display: flex; flex-direction: column; overflow: auto;">
+                        <div style="flex: 1 1 100%; overflow: auto;">
+                            <div id="designerHost" style="margin: 20px 40px 20px 20px;"></div>
+                        </div>
+                        <div id="errorPane" style="display: none; flex: 0 0 65px; color: white; background-color: #3a96dd; border-top: 1px solid #D2D2D2; padding: 4px 8px; overflow-x: hidden; overflow-y: auto; white-space: nowrap;"></div>
+                    </div>
+                    <div id="treeViewVerticalSplitter" class="js-treeview-splitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-left: 1px solid #D2D2D2; border-right: 1px solid #D2D2D2; cursor: ew-resize;"></div>
+                    <section id="treeViewSheetHost" class="js-treeview" style="flex: 0 0 auto; width: 360px; height: 100%; overflow: auto;">
+                        <nav class="bullet__wrapper js-treeview-menu">
+                            <span class="bullet__title">Visual tree view</span>
+                            <span class="bullet js-treeview-bullet">
+                                <span class="bullet__icon js-treeview-icon"></span>
+                                <span class="bullet__description js-treeview-description">Hide</span>
+                            </span>
+                        </nav>
+                        <div class="treeview-items js-treeview-items"></div>
+                    </section>
+                    <div id="propertyVerticalSplitter" class="js-properties-splitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-left: 1px solid #D2D2D2; border-right: 1px solid #D2D2D2; cursor: ew-resize;"></div>
+                    <section id="propertySheetHost" class="js-properties" style="flex: 0 0 auto; width: 360px; height: 100%; overflow: auto; background-color: #F9F9F9;">
+                        <nav class="bullet__wrapper js-properties-menu">
+                            <span class="bullet__title">Element properties</span>
+                            <span class="bullet js-properties-bullet">
+                                <span class="bullet__icon js-properties-icon"></span>
+                                <span class="bullet__description js-properties-description">Hide</span>
+                            </span>
+                        </nav>
+                        <div class="properties-items js-properties-items"></div>
+                    </section>
+                </div>
+                <div id="horizontalSplitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-top: 1px solid #D2D2D2; border-bottom: 1px solid #D2D2D2; cursor: ns-resize;"></div>
+                <div class="json-wrapper">
+                    <nav class='bullet__wrapper js-json-menu'>
+                        <span class='bullet__title'>JSON</span>
+                        <span class='bullet js-host-json__bullet'>
+                            <span class='bullet__icon js-host-json__icon'></span>
+                            <span class='bullet__description js-host-json__description'>Hide</span>
+                        </span>
+                    </nav>
+                    <div id="jsonEditorHost" style="flex: 0 0 auto; display: flex; height: 300px; overflow: hidden;">
+                        <div id="loadingEditor" style="padding: 8px;">Loading editor...</div>
+                    </div>
+                </div>
+            </div>
+            <div class="aside-panel js-aside-panel"></div>
+        </div>
+    </div>
+</body>
+
 </html>
