--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -22,13 +22,14 @@
             <span style="color: white; font-size: 22px;">Adaptive Cards Designer (preview)</span>
         </div>
         <div id="toolbar" style="flex: 0 0 auto; background-color: #F1F1F1; display: flex; align-items: center; border-bottom: 1px solid #D2D2D2;">
-            <div class="toolbar-btn toolbar-btn__icon-fullscreen js-enter-fullscreen">Enter Full Screen</div>
-            <span style="color: black;">Select Host App:</span>
-            <div id="containerPickerHost" style="flex: 0 0 250px; margin: 0px 16px 0px 8px;"></div>
-            <div class="toolbar-btn toolbar-btn__icon-copy js-copy-json">Copy JSON</div>
+            <div id="btnFullScreen" class="acd-toolbar-button acd-icon-fullScreen">Enter Full Screen</div>
+            <span style="color: black; margin-left: 8px;">Select Host App:</span>
+            <div id="containerPickerHost" style="flex: 0 0 250px; margin: 0px 8px 0px 8px;"></div>
+            <div id="btnNewCard" class="acd-toolbar-button acd-icon-newCard" title="Start a new card from scratch">New card</div>
+            <div id="btnCopyToClipboard" class="acd-toolbar-button acd-icon-copy" title="Copy the JSON for this card to the clipboard">Copy JSON</div>
         </div>
         <div class="content" style="display: flex; flex: 1 1 auto; overflow-y: hidden;">
-            <section class="aside js-aside">
+            <div id="toolPalettePane" class="aside js-aside">
                 <nav class="bullet__wrapper">
                     <span class="bullet__title">Tool box</span>
                     <span class="bullet js-aside-bullet">
@@ -36,8 +37,8 @@
                         <span class="bullet__description js-aside-description">Hide</span>
                     </span>
                 </nav>
-                <ul id="toolPalette" class="aside-items js-aside-items"></ul>
-            </section>
+                <div id="toolPalette" class="acd-dockedPane"></div>
+            </div>
             <div style="display: flex; flex-direction: column; flex: 1 1 100%; overflow: hidden;">
                 <div style="display: flex; flex: 1 1 100%; overflow: hidden;">
                     <div id="designerBackground" style="flex: 1 1 70%; background-color: #F6F6F6; display: flex; flex-direction: column; overflow: auto;">
@@ -47,7 +48,7 @@
                         <div id="errorPane" style="display: none; flex: 0 0 65px; color: white; background-color: #3a96dd; border-top: 1px solid #D2D2D2; padding: 4px 8px; overflow-x: hidden; overflow-y: auto; white-space: nowrap;"></div>
                     </div>
                     <div id="treeViewVerticalSplitter" class="js-treeview-splitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-left: 1px solid #D2D2D2; border-right: 1px solid #D2D2D2; cursor: ew-resize;"></div>
-                    <section id="treeViewSheetHost" class="js-treeview" style="flex: 0 0 auto; width: 360px; height: 100%; overflow: auto;">
+                    <section id="treeViewPane" style="flex: 0 0 auto; display: flex; flex-direction: column; width: 360px; height: 100%;">
                         <nav class="bullet__wrapper js-treeview-menu">
                             <span class="bullet__title">Visual tree view</span>
                             <span class="bullet js-treeview-bullet">
@@ -55,30 +56,30 @@
                                 <span class="bullet__description js-treeview-description">Hide</span>
                             </span>
                         </nav>
-                        <div class="treeview-items js-treeview-items"></div>
+                        <div id="treeViewHost" style="flex: 1 1 100%; overflow-y: auto; overflow-x: hidden; padding-top: 6px;"></div>
                     </section>
                     <div id="propertyVerticalSplitter" class="js-properties-splitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-left: 1px solid #D2D2D2; border-right: 1px solid #D2D2D2; cursor: ew-resize;"></div>
-                    <section id="propertySheetHost" class="js-properties" style="flex: 0 0 auto; width: 360px; height: 100%; overflow: auto; background-color: #F9F9F9;">
-                        <nav class="bullet__wrapper js-properties-menu">
+                    <section id="propertySheetPane" style="flex: 0 0 auto; display: flex; flex-direction: column; width: 360px; height: 100%; background-color: #F9F9F9;">
+                        <nav class="bullet__wrapper js-properties-menu" style="flex: 0 0 auto;">
                             <span class="bullet__title">Element properties</span>
                             <span class="bullet js-properties-bullet">
                                 <span class="bullet__icon js-properties-icon"></span>
                                 <span class="bullet__description js-properties-description">Hide</span>
                             </span>
                         </nav>
-                        <div class="properties-items js-properties-items"></div>
+                        <div id="propertySheetHost" style="flex: 1 1 100%; overflow: auto;"></div>
                     </section>
                 </div>
                 <div id="horizontalSplitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-top: 1px solid #D2D2D2; border-bottom: 1px solid #D2D2D2; cursor: ns-resize;"></div>
-                <div class="json-wrapper">
-                    <nav class='bullet__wrapper js-json-menu'>
+                <div id="jsonEditorPane" style="flex: 0 0 auto; display: flex; flex-direction: column; height: 360px;">
+                    <nav id="jsonEditorHeader" class='bullet__wrapper js-json-menu'>
                         <span class='bullet__title'>JSON</span>
                         <span class='bullet js-host-json__bullet'>
                             <span class='bullet__icon js-host-json__icon'></span>
                             <span class='bullet__description js-host-json__description'>Hide</span>
                         </span>
                     </nav>
-                    <div id="jsonEditorHost" style="flex: 0 0 auto; display: flex; height: 300px; overflow: hidden;">
+                    <div id="jsonEditorHost" style="flex: 1 1 100%;">
                         <div id="loadingEditor" style="padding: 8px;">Loading editor...</div>
                     </div>
                 </div>
