--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -22,7 +22,7 @@
             <span style="color: white; font-size: 22px;">Adaptive Cards Designer (preview)</span>
         </div>
         <div id="toolbar" style="flex: 0 0 auto; background-color: #F1F1F1; display: flex; align-items: center; border-bottom: 1px solid #D2D2D2;">
-            <div id="btnFullScreen" class="acd-toolbar-button acd-icon-fullScreen">Enter Full Screen</div>
+            <div id="btnToggleFullScreen" class="acd-toolbar-button acd-icon-fullScreen">Enter Full Screen</div>
             <span style="color: black; margin-left: 8px;">Select Host App:</span>
             <div id="containerPickerHost" style="flex: 0 0 250px; margin: 0px 8px 0px 8px;"></div>
             <div id="btnNewCard" class="acd-toolbar-button acd-icon-newCard" title="Start a new card from scratch">New card</div>
@@ -30,13 +30,13 @@
         </div>
         <div class="content" style="display: flex; flex: 1 1 auto; overflow-y: hidden;">
             <div id="toolPalettePane" class="aside js-aside">
-                <nav class="bullet__wrapper">
+                <div class="acd-sidePaneHeader">
                     <span class="bullet__title">Tool box</span>
                     <span class="bullet js-aside-bullet">
                         <span class="bullet__icon js-aside-icon"></span>
                         <span class="bullet__description js-aside-description">Hide</span>
                     </span>
-                </nav>
+                </div>
                 <div id="toolPalette" class="acd-dockedPane"></div>
             </div>
             <div style="display: flex; flex-direction: column; flex: 1 1 100%; overflow: hidden;">
@@ -49,18 +49,18 @@
                     </div>
                     <div id="treeViewVerticalSplitter" class="js-treeview-splitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-left: 1px solid #D2D2D2; border-right: 1px solid #D2D2D2; cursor: ew-resize;"></div>
                     <section id="treeViewPane" style="flex: 0 0 auto; display: flex; flex-direction: column; width: 360px; height: 100%;">
-                        <nav class="bullet__wrapper js-treeview-menu">
+                        <nav class="acd-sidePaneHeader">
                             <span class="bullet__title">Visual tree view</span>
                             <span class="bullet js-treeview-bullet">
                                 <span class="bullet__icon js-treeview-icon"></span>
                                 <span class="bullet__description js-treeview-description">Hide</span>
                             </span>
                         </nav>
-                        <div id="treeViewHost" style="flex: 1 1 100%; overflow-y: auto; overflow-x: hidden; padding-top: 6px;"></div>
+                        <div id="treeViewHost" style="flex: 1 1 100%; overflow-y: auto; overflow-x: hidden; padding-top: 6px; background-color: white;"></div>
                     </section>
                     <div id="propertyVerticalSplitter" class="js-properties-splitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-left: 1px solid #D2D2D2; border-right: 1px solid #D2D2D2; cursor: ew-resize;"></div>
                     <section id="propertySheetPane" style="flex: 0 0 auto; display: flex; flex-direction: column; width: 360px; height: 100%; background-color: #F9F9F9;">
-                        <nav class="bullet__wrapper js-properties-menu" style="flex: 0 0 auto;">
+                        <nav class="acd-sidePaneHeader">
                             <span class="bullet__title">Element properties</span>
                             <span class="bullet js-properties-bullet">
                                 <span class="bullet__icon js-properties-icon"></span>
@@ -72,7 +72,7 @@
                 </div>
                 <div id="horizontalSplitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-top: 1px solid #D2D2D2; border-bottom: 1px solid #D2D2D2; cursor: ns-resize;"></div>
                 <div id="jsonEditorPane" style="flex: 0 0 auto; display: flex; flex-direction: column; height: 360px;">
-                    <nav id="jsonEditorHeader" class='bullet__wrapper js-json-menu'>
+                    <nav id="jsonEditorHeader" class="acd-sidePaneHeader">
                         <span class='bullet__title'>JSON</span>
                         <span class='bullet js-host-json__bullet'>
                             <span class='bullet__icon js-host-json__icon'></span>
