--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -29,17 +29,8 @@
             <div id="btnCopyToClipboard" class="acd-toolbar-button acd-icon-copy" title="Copy the JSON for this card to the clipboard">Copy JSON</div>
         </div>
         <div class="content" style="display: flex; flex: 1 1 auto; overflow-y: hidden;">
-            <div id="toolPalettePane" class="aside js-aside">
-                <div id="toolPalettePaneHeader"></div>
-                <!--
-                <div id="toolPaletteHeader" class="acd-sidePaneHeader">
-                    <span class="bullet__title">Tool box</span>
-                    <span class="bullet js-aside-bullet">
-                        <span class="bullet__icon js-aside-icon"></span>
-                        <span class="bullet__description js-aside-description">Hide</span>
-                    </span>
-                </div>
-                -->
+            <div id="leftCollapsedPaneTabHost" class="acd-verticalCollapsedTabContainer" style="border-right: 1px solid #D2D2D2;"></div>
+            <div id="toolPalettePane" class="selector-toolPalette" style="background-color: white; border-right: 1px solid #D2D2D2;">
                 <div id="toolPalette" class="acd-dockedPane"></div>
             </div>
             <div style="display: flex; flex-direction: column; flex: 1 1 100%; overflow: hidden;">
@@ -50,53 +41,24 @@
                         </div>
                         <div id="errorPane" style="display: none; flex: 0 0 65px; color: white; background-color: #3a96dd; border-top: 1px solid #D2D2D2; padding: 4px 8px; overflow-x: hidden; overflow-y: auto; white-space: nowrap;"></div>
                     </div>
-                    <div id="treeViewVerticalSplitter" class="js-treeview-splitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-left: 1px solid #D2D2D2; border-right: 1px solid #D2D2D2; cursor: ew-resize;"></div>
-                    <section id="treeViewPane" style="flex: 0 0 auto; display: flex; flex-direction: column; width: 360px; height: 100%;">
-                        <div id="treeViewPaneHeader"></div>
-                        <!--
-                        <nav class="acd-sidePane-header">
-                            <span class="bullet__title">Visual tree view</span>
-                            <span class="bullet js-treeview-bullet">
-                                <span class="bullet__icon js-treeview-icon"></span>
-                                <span class="bullet__description js-treeview-description">Hide</span>
-                            </span>
-                        </nav>
-                        -->
+                    <div id="treeViewVerticalSplitter" class="selector-treeView" style="flex: 0 0 6px; background-color: #EEEEEE; border-left: 1px solid #D2D2D2; border-right: 1px solid #D2D2D2; cursor: ew-resize;"></div>
+                    <section id="treeViewPane" class="selector-treeView" style="flex: 0 0 auto; display: flex; flex-direction: column; width: 360px; height: 100%;">
                         <div id="treeViewHost" style="flex: 1 1 100%; overflow-y: auto; overflow-x: hidden; padding-top: 6px; background-color: white;  "></div>
                     </section>
-                    <div id="propertyVerticalSplitter" class="js-properties-splitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-left: 1px solid #D2D2D2; border-right: 1px solid #D2D2D2; cursor: ew-resize;"></div>
-                    <section id="propertySheetPane" style="flex: 0 0 auto; display: flex; flex-direction: column; width: 360px; height: 100%; background-color: #F9F9F9;">
-                        <div id="propertySheetPaneHeader"></div>
-                        <!--
-                        <nav class="acd-sidePane-header">
-                            <span class="bullet__title">Element properties</span>
-                            <span class="bullet js-properties-bullet">
-                                <span class="bullet__icon js-properties-icon"></span>
-                                <span class="bullet__description js-properties-description">Hide</span>
-                            </span>
-                        </nav>
-                        -->
+                    <div id="propertyVerticalSplitter" class="selector-propertySheet" style="flex: 0 0 6px; background-color: #EEEEEE; border-left: 1px solid #D2D2D2; border-right: 1px solid #D2D2D2; cursor: ew-resize;"></div>
+                    <section id="propertySheetPane" class="selector-propertySheet" style="flex: 0 0 auto; display: flex; flex-direction: column; width: 360px; height: 100%; background-color: #F9F9F9;">
                         <div id="propertySheetHost" style="flex: 1 1 100%; overflow: auto;"></div>
                     </section>
                 </div>
-                <div id="horizontalSplitter" style="flex: 0 0 6px; background-color: #EEEEEE; border-top: 1px solid #D2D2D2; border-bottom: 1px solid #D2D2D2; cursor: ns-resize;"></div>
-                <div id="jsonEditorPane" style="flex: 0 0 auto; display: flex; flex-direction: column; height: 360px;">
-                    <div id="jsonEditorPaneHeader"></div>
-                    <!--
-                    <nav id="jsonEditorHeader" class="acd-sidePane-header">
-                        <span class='bullet__title'>JSON</span>
-                        <span class='bullet js-host-json__bullet'>
-                            <span class='bullet__icon js-host-json__icon'></span>
-                            <span class='bullet__description js-host-json__description'>Hide</span>
-                        </span>
-                    </nav>
-                    -->
+                <div id="horizontalSplitter" class="selector-jsonEditor" style="flex: 0 0 6px; background-color: #EEEEEE; border-top: 1px solid #D2D2D2; border-bottom: 1px solid #D2D2D2; cursor: ns-resize;"></div>
+                <div id="jsonEditorPane" class="selector-jsonEditor" style="flex: 0 0 auto; display: flex; flex-direction: column; height: 360px;">
                     <div id="jsonEditorHost" style="flex: 1 1 100%;">
                         <div id="loadingEditor" style="padding: 8px;">Loading editor...</div>
                     </div>
                 </div>
+                <div id="bottomCollapsedPaneTabHost" style="border-top: 1px solid #D2D2D2;"></div>
             </div>
-            <div class="aside-panel js-aside-panel"></div>
+            <div id="rightCollapsedPaneTabHost" class="acd-verticalCollapsedTabContainer" style="border-left: 1px solid #D2D2D2;"></div>
         </div>
     </div>
 </body>
