Add support for undo/redo

--- a/source/nodejs/adaptivecards-designer/index.html
+++ b/source/nodejs/adaptivecards-designer/index.html
@@ -22,11 +22,15 @@
             <span style="color: white; font-size: 22px;">Adaptive Card Designer (preview)</span>
         </div>
         <div id="toolbar" class="acd-toolbar">
-            <div id="btnToggleFullScreen" class="acd-toolbar-button acd-icon-fullScreen">Enter Full Screen</div>
+            <button id="btnToggleFullScreen" class="acd-toolbar-button acd-icon-fullScreen">Enter Full Screen</button>
             <span style="color: black; margin-left: 8px;">Select Host App:</span>
             <div id="containerPickerHost" style="flex: 0 0 250px; margin: 0px 8px 0px 8px;"></div>
-            <div id="btnNewCard" class="acd-toolbar-button acd-icon-newCard" title="Start a new card from scratch">New card</div>
-            <div id="btnCopyToClipboard" class="acd-toolbar-button acd-icon-copy" title="Copy the JSON for this card to the clipboard">Copy JSON</div>
+            <div class="acd-toolbar-separator"></div>
+            <button id="btnUndo" disabled=true class="acd-toolbar-button acd-toolbar-button-iconOnly acd-icon-undo" title="Undo your last changes"></button>
+            <button id="btnRedo" disabled=true class="acd-toolbar-button acd-toolbar-button-iconOnly acd-icon-redo" title="Redo your last changes"></button>
+            <div class="acd-toolbar-separator"></div>
+            <button id="btnNewCard" class="acd-toolbar-button acd-icon-newCard" title="Start a new card from scratch">New card</button>
+            <button id="btnCopyToClipboard" class="acd-toolbar-button acd-icon-copy" title="Copy the JSON for this card to the clipboard">Copy JSON</button>
         </div>
         <div class="content" style="display: flex; flex: 1 1 auto; overflow-y: hidden;">
             <div id="leftCollapsedPaneTabHost" class="acd-verticalCollapsedTabContainer" style="border-right: 1px solid #D2D2D2;"></div>
